--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,10 @@
 
 # Build results
 
-[Dd]ebug/
-[Rr]elease/
-x64/
-build/
-[Bb]in/
-[Oo]bj/
+Debug/
+Release/
+obj/
+package/
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
@@ -57,6 +55,7 @@ ipch/
 # Visual Studio profiler
 *.psess
 *.vsp
+*.vs
 *.vspx
 
 # Guidance Automation Toolkit
